update menu item to navigate with router higher order components

--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "husky": {
     "hooks": {
-    "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
@@ -45,5 +46,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
