--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "firebase": "^7.24.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.2",
     "node-sass": "^4.14.1",
